@@ -12,6 +12,7 @@
 - if batch mode, do not edit any spec part
 - spec_only : display spec name if successfull
 - echo+read in one line with read -p
+- add new plugin exclude_file
 
 * Sun Jan 17 2021 <eric.gerbier@tutanota.com> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
